# udacity_nd_robotics

./: .clang-format  .gitignore  LICENSE
Project3/catkin_ws/src/: rviz_where_am_i.rviz
Project3/catkin_ws/src/ball_chaser/: CMakeLists.txt  package.xml
Project3/catkin_ws/src/ball_chaser/src/: .drive_bot.cpp.swp
Project3/catkin_ws/src/ball_chaser/test/: CMakeLists.txt
Project3/catkin_ws/src/my_robot/config/: base_local_planner_params.yaml
Project3/catkin_ws/src/my_robot/launch/: amcl.launch  world.launch
Project3/catkin_ws/src/my_robot/maps/: apartment.yaml
Project3/catkin_ws/src/my_robot/worlds/: apartment
Project4/catkin_ws/src/: rviz_launch.launch  rviz_where_am_i.rviz
Project4/catkin_ws/src/ball_chaser/src/: CMakeLists.txt  process_image.cpp
Project4/catkin_ws/src/my_robot/config/: base_local_planner_params.yaml
Project4/catkin_ws/src/my_robot/launch/: localization.launch  (+2 more)
catkin_ws/: .gitignore
catkin_ws/src/ball_chaser/: CMakeLists.txt
catkin_ws/src/ball_chaser/launch/: ball_chaser.launch
catkin_ws/src/ball_chaser/src/: CMakeLists.txt  drive_bot.cpp  process_image.cpp  process_image.h
catkin_ws/src/ball_chaser/test/: process_image_test.cpp
catkin_ws/src/my_robot/: package.xml
catkin_ws/src/my_robot/launch/: world.launch
catkin_ws/src/my_robot/urdf/: my_robot.xacro
catkin_ws/src/my_robot/worlds/: apartment
kalman_filter_lab/catkin_ws/src/: EKFLab.rviz  Rvizlaunch.launch  rqt_multiplot.xml
model/GoPiGo/: model.config  model.sdf
model/appartment/: model.config  model.sdf
script/: welcome.cpp
world/: appartment
(+4 files in other folders)
